--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ h1{
 
 /* Style des sous-titres (h2) */
 h2{
-    font-size:3rem;
+    font-size:2.75rem;
     margin-bottom: 100px;
 }
 
@@ -132,11 +132,28 @@ p{
 }
 
 .color-band {
-    height: 20px; /* Ajustez la hauteur selon vos besoins */
+    height: 35px; /* Ajustez la hauteur selon vos besoins */
     background-color: #000000; /* Remplacez par la couleur de votre choix */
     width: 100%; /* Occuper toute la largeur */
     margin: 0; /* Supprimez la marge */
 }
+
+.download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #000000; /* Couleur de fond verte */
+    color: white; /* Couleur du texte */
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px; /* Bord arrondi */
+    transition: background-color 0.3s ease; /* Effet de transition */
+}
+
+.download-button:hover {
+    background-color: #606060; /* Couleur de fond au survol */
+}
+
 
 /* Style de la boîte de compétences */
 .skill {
@@ -254,7 +271,7 @@ p{
 /* Titre central pour les réalisations, avec animation d'opacité */
 .realisations h3{
     position: absolute;
-    top: 50%;
+    top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size:2rem;
@@ -269,17 +286,18 @@ p{
     width: 100%;
     height: 100%;
     text-decoration: none;
-    color: #fff;
+    color: #000000;
 }
 
 
 /* Image de la réalisation avec un filtre sombre */
 .realisations img{
-    width: 100%;
-    height: 100%;
+    width: 350px;
+    height: auto;
     object-fit: cover;
-    filter: brightness(90%);
+    filter: brightness(100%);
     transition: .4s ease;
+    border-radius: 10px; /* Bord arrondi */
 }
 
 /* Effet au survol des réalisations (réduit le filtre et montre le titre) */
@@ -447,6 +465,12 @@ header{
     transform: translateY(-5px); /* Légère élévation au survol */
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); /* Accentuation de l'ombre */
 }
+
+.small-image {
+    width: 100%;
+    height: auto;
+}
+
 
 
 /* Media Query pour l'adaptation mobile */
