--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,7 +237,7 @@ p{
     transition: transform 0.3s ease, filter 0.3s ease;
 }
 
-/* Style des images dans la boîte de veille */
+/* Style des images dans la boîte de Veille */
 .veille img {
     width: 100%; /* Faire en sorte que l'image remplisse tout l'espace disponible */
     height: auto;
@@ -246,7 +246,7 @@ p{
     padding: 0; /* Supprime le padding autour de l'image */
 }
 
-/* Style de la boîte de veille */
+/* Style de la boîte de Veille */
 .veille {
     background: #fff;
     border-radius: 15px;
@@ -254,7 +254,7 @@ p{
     box-sizing: border-box;
 }
 
-/* Style des images dans la boîte de veille */
+/* Style des images dans la boîte de Veille */
 .veille img {
     width: 100%; /* Faire en sorte que l'image remplisse tout l'espace disponible */
     height: auto;
@@ -282,7 +282,7 @@ p{
     line-height: 1.8rem; /* rend la lecture plus fluide */
 }
 
-/* Image de la veille-technologique avec un filtre sombre */
+/* Image de la Veille-technologique avec un filtre sombre */
 .veille-technologique img{
     width: 100%;
     height: 100%;
@@ -291,7 +291,7 @@ p{
     transition: .4s ease;
 }
 
-/* Effet au survol de la veille-technologique (réduit le filtre et montre le titre) */
+/* Effet au survol de la Veille-technologique (réduit le filtre et montre le titre) */
 .veille-technologique:hover {
     filter: brightness(80%);
     transform: scale(1.05); /* Légère augmentation de la taille au survol */
@@ -454,6 +454,7 @@ header{
     display: flex;
     align-items: center;
     list-style: none;
+    margin: 0px 20px;
 }
 
 /* Lien du menu */
@@ -464,6 +465,7 @@ header{
     display: block;
     box-sizing: border-box;
     transition: .2s ease;
+    margin: 0px 10px;
 }
 
 /* Effet de survol du lien du menu */
